# vibe-kanban

./: .gitignore  .npmrc  .pnpmrc  AGENTS.md  ARCH.md  Cargo.toml  Dockerfile  NEXT  NEXT.md  NOTICE  README.md  _MCP.md  _TODO.md  backend-deps-report.md  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  rust-toolchain.toml
crates/app-runtime/: Cargo.toml
crates/app-runtime/src/: lib.rs  notification.rs
crates/config/: Cargo.toml
crates/config/src/: cache_budget.rs  lib.rs  schema.rs  yaml_schema.rs
crates/config/src/editor/: mod.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-0b9789c61abeeb4a661ca7ba0c14bb0902a4d8f25674ab9a296a8360f9989718.json  query-2b50160e81d08a7237d14a53d181edb7f9229bd5aa7c1c69aca9610fd767a0a8.json  query-416edb3ac2d253393067fcb08e36bdde096f07ff0079a94acf5f0423ad05a412.json  query-6aa252c2f434989d8f30d54d5150737b72e2111913ed48980ef1ce87d45b6afe.json  query-7057a3c6815dc829b73db064d85b0914dccc6af79712b75b755f19e4cade45a0.json  query-928e740ce5a018bcddce7bb08c0ac6e5da9dbaa63935b9384cfb2739504f1515.json  query-9609ff6649b3692d6324d37a01774aae8b3ad2b9c6bcb82a824e8d711753cfde.json  query-98bce909e77a6c8136dd12d5c2d6eff08b07c8f1efb8ef8f0c15a455ca117084.json  query-c8e62abec6bfad4ce9e01510aebdbd4e7d5719a4e1ea569d3e2bf8d213072802.json  query-f34a850dabe6a290500cfb59cdfac1b129f4b9ce325ba713b3a30d84068b01a3.json
crates/db/migration/: Cargo.toml
crates/db/migration/src/: lib.rs  m20250101000000_baseline.rs  m20250215000000_task_groups.rs  m20250220000000_task_group_entry_unique.rs  m20260227000000_idempotency_keys.rs  m20260302000000_project_git_no_verify_override.rs  m20260302000001_approvals.rs  m20260302000002_attempt_control_leases.rs  m20260303000000_mcp_tool_tasks.rs  m20260304000000_archived_kanbans.rs  m20260304000001_executor_protocol_strict.rs  m20260307000000_auto_orchestrator.rs  m20260307010000_task_automation_override.rs  m20260307020000_task_lineage_source.rs  m20260307110000_workspace_lifecycle_hooks.rs  m20260309000000_milestones_hard_cut.rs  m20260310000000_rename_task_groups_to_milestones.rs  m20260311000000_milestone_plan_applications.rs  m20260312000000_task_turn_continuation.rs  m20260312000001_project_mcp_executor_policy.rs  m20260329000000_event_outbox_unpublished_index.rs  main.rs
crates/db/migrations/: 20251221090000_create_execution_process_log_entries.sql
crates/db/src/: events.rs  lib.rs  retry.rs  types.rs
crates/db/src/entities/: approval.rs  archived_kanban.rs  attempt_control_lease.rs  coding_agent_turn.rs  draft.rs  event_outbox.rs  execution_process.rs  execution_process_log.rs  execution_process_log_entry.rs  execution_process_repo_state.rs  idempotency_key.rs  image.rs  mcp_tool_task.rs  merge.rs  milestone.rs  milestone_plan_application.rs  mod.rs  project.rs  project_repo.rs  repo.rs  scratch.rs  session.rs  shared_activity_cursor.rs  shared_task.rs  tag.rs  task.rs  task_attempt_activity.rs  task_dispatch_state.rs  task_group.rs  task_image.rs  task_orchestration_state.rs  workspace.rs  workspace_repo.rs
crates/db/src/models/: approval.rs  archived_kanban.rs  attempt_control_lease.rs  coding_agent_turn.rs  event_outbox.rs  execution_process.rs  execution_process_log_entries.rs  execution_process_logs.rs  execution_process_repo_state.rs  idempotency.rs  ids.rs  image.rs  mcp_tool_task.rs  merge.rs  milestone_plan_application.rs  mod.rs  project.rs  project_repo.rs  repo.rs  scratch.rs  session.rs  tag.rs  task.rs  task_dispatch_state.rs  task_group.rs  task_orchestration_state.rs  workspace.rs  workspace_repo.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs  patches.rs  streams.rs
crates/execution/: Cargo.toml
crates/execution/src/: diff_stream.rs  fs_watch.rs  github.rs  image.rs  lib.rs  pr_monitor.rs  queued_message.rs
crates/execution/src/container/: command.rs  copy.rs  local.rs  mod.rs
crates/execution/src/github/: cli.rs
crates/executor-amp/: Cargo.toml
crates/executor-amp/src/: amp.rs  lib.rs
crates/executor-claude/: Cargo.toml
crates/executor-claude/src/: lib.rs
crates/executor-claude/src/claude/: client.rs  mod.rs  protocol.rs
crates/executor-codex/: Cargo.toml  build.rs
crates/executor-codex/src/: lib.rs
crates/executor-codex/src/codex/: client.rs  compatibility.rs  dynamic_tools.rs  jsonrpc.rs  mod.rs  session.rs
crates/executor-copilot/: Cargo.toml
crates/executor-copilot/src/: copilot.rs  lib.rs
crates/executor-cursor/: Cargo.toml
crates/executor-cursor/src/: lib.rs
crates/executor-cursor/src/cursor/: mcp.rs  mod.rs
crates/executor-droid/: Cargo.toml
crates/executor-droid/src/: lib.rs
crates/executor-droid/src/droid/: mod.rs  normalize_logs.rs
crates/executor-fake-agent/: Cargo.toml
crates/executor-fake-agent/src/: fake_agent.rs  lib.rs
crates/executor-gemini/: Cargo.toml
crates/executor-gemini/src/: gemini.rs  lib.rs
crates/executors/: Cargo.toml  default_mcp.json  default_profiles.json
crates/executors-core/: Cargo.toml  default_mcp.json
crates/executors-core/src/: agent_command.rs  approvals.rs  command.rs  lib.rs  log_writer.rs  mcp_config.rs
crates/executors-core/src/executors/: mod.rs
crates/executors/src/: actions.rs  agent_command.rs  auto_retry.rs  command.rs  lib.rs  llman.rs  mcp_config.rs  profile.rs
crates/logs-store/: Cargo.toml
crates/logs-store/src/: lib.rs  msg_store.rs
crates/repos/: Cargo.toml
crates/repos/src/: file_ranker.rs  file_search_cache.rs  filesystem.rs  github_repo.rs  lib.rs  project.rs  repo.rs  workspace_manager.rs  worktree_manager.rs
crates/repos/tests/: filesystem_repo_discovery.rs  git_ops_safety.rs  git_test_utils.rs  git_workflow.rs  worktree_manager_ensure.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: archived_kanbans.rs  lib.rs  orchestration.rs  runtime.rs  task_deletion.rs  turn_continuation.rs
crates/utils-core/: Cargo.toml
crates/utils-core/src/: diff.rs  lib.rs  log_entries.rs  notifications.rs  response.rs  shell.rs  text.rs
crates/utils-jwt/: Cargo.toml
crates/utils-jwt/src/: lib.rs
crates/vk/: Cargo.toml
crates/vk/src/: main.rs
(+1208 files in other folders)
