[package]
name = "app-runtime"
version = "0.0.143"
edition = "2024"

[dependencies]
config = { path = "../config" }
db = { path = "../db" }
events = { path = "../events" }
execution = { path = "../execution" }
executors = { path = "../executors" }
executors-core = { path = "../executors-core" }
logs-axum = { path = "../logs-axum" }
logs-store = { path = "../logs-store" }
repos = { path = "../repos" }
tasks = { path = "../tasks" }
utils-assets = { path = "../utils-assets" }
utils-core = { path = "../utils-core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
futures = "0.3.31"
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
notify-rust = "4.11"

[dev-dependencies]
json-patch = "2.0"
tempfile = "3.8"
test-support = { path = "../test-support" }
