[package]
name = "db"
version = "0.0.143"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
executors = { path = "../executors" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sea-orm = { version = "2.0.0-rc.28", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "with-uuid", "with-chrono", "with-json"] }
sea-orm-migration = { version = "2.0.0-rc.28" }
db-migration = { path = "migration" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { workspace = true }
