[package]
name = "execution"
version = "0.0.143"
edition = "2024"

[dependencies]
config = { path = "../config" }
db = { path = "../db" }
executors = { path = "../executors" }
executors-core = { path = "../executors-core" }
executors-protocol = { path = "../executors-protocol" }
logs-protocol = { path = "../logs-protocol" }
logs-store = { path = "../logs-store" }
repos = { path = "../repos" }
tasks = { path = "../tasks" }
utils-core = { path = "../utils-core" }
utils-assets = { path = "../utils-assets" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
command-group = { version = "5.0", features = ["with-tokio"] }
nix = { version = "0.29", features = ["signal", "process"] }
futures = "0.3"
futures-util = "0.3"
json-patch = "2.0"
tokio-stream = "0.1.17"
globwalk = "0.9"
strip-ansi-escapes = "0.2.1"
shlex = "1.3.0"
regex = "1.11.1"
backon = "1.5.1"
base64 = "0.22"
secrecy = "0.10.3"
once_cell = "1.20"
moka = { version = "0.12", features = ["future", "sync"] }
rand = { version = "0.8", features = ["std"] }
notify = "8.2.0"
notify-debouncer-full = "0.5.0"
dashmap = "6.1"
sha2 = "0.10"
dunce = "1.0"

[dev-dependencies]
tempfile = "3.8"
