[package]
name = "executor-claude"
version = "0.0.143"
edition = "2024"

[dependencies]
executors-core = { path = "../executors-core" }
executors-protocol = { path = "../executors-protocol" }
logs-protocol = { path = "../logs-protocol" }
logs-store = { path = "../logs-store" }
utils-core = { path = "../utils-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
command-group = { version = "5.0", features = ["with-tokio"] }
futures = "0.3.31"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.11.1"
schemars = { workspace = true }
ts-rs = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
strum = "0.27.2"
strum_macros = "0.27.2"
derivative = "2.2.0"

json-patch = "2.0"
strip-ansi-escapes = "0.2.1"
