[package]
name = "executor-codex"
version = "0.0.143"
edition = "2024"

[dependencies]
executors-core = { path = "../executors-core" }
executors-protocol = { path = "../executors-protocol" }
logs-store = { path = "../logs-store" }
utils-core = { path = "../utils-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
command-group = { version = "5.0", features = ["with-tokio"] }
futures = "0.3.31"
thiserror = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.11.1"
schemars = { workspace = true }
ts-rs = { workspace = true }
strum = "0.27.2"
strum_macros = "0.27.2"
derivative = "2.2.0"
strip-ansi-escapes = "0.2.1"
sha2 = "0.10.9"
tempfile = "3.10"

codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", rev = "f028679abb30051cec2434e624cd99975986b41b" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", rev = "f028679abb30051cec2434e624cd99975986b41b" }

[build-dependencies]
sha2 = "0.10.9"
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", rev = "f028679abb30051cec2434e624cd99975986b41b" }
serde_json = { workspace = true }

[dev-dependencies]
logs-protocol = { path = "../logs-protocol" }
tempfile = "3.10"
