[package]
name = "executor-copilot"
version = "0.0.143"
edition = "2024"

[dependencies]
executors-core = { path = "../executors-core" }
executors-protocol = { path = "../executors-protocol" }
logs-store = { path = "../logs-store" }
utils-core = { path = "../utils-core" }

tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
command-group = { version = "5.0", features = ["with-tokio"] }
futures = "0.3.31"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = { version = "1.0.4", features = ["derive", "chrono04", "uuid1", "preserve_order"] }
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
regex = "1.11.1"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1.44"
strip-ansi-escapes = "0.2.1"
