[package]
name = "executor-droid"
version = "0.0.143"
edition = "2024"

[dependencies]
executors-core = { path = "../executors-core" }
executors-protocol = { path = "../executors-protocol" }
logs-store = { path = "../logs-store" }
utils-core = { path = "../utils-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
command-group = { version = "5.0", features = ["with-tokio"] }
futures = "0.3.31"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
ts-rs = { workspace = true }
regex = "1.11.1"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
strip-ansi-escapes = "0.2.1"
tracing = { workspace = true }
