[package]
name = "executor-fake-agent"
version = "0.0.143"
edition = "2024"

[dependencies]
executors-core = { path = "../executors-core" }
executor-codex = { path = "../executor-codex" }
logs-store = { path = "../logs-store" }
utils-core = { path = "../utils-core" }

tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
command-group = { version = "5.0", features = ["with-tokio"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = { version = "1.0.4", features = ["derive", "chrono04", "uuid1", "preserve_order"] }
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
thiserror = "2.0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
derivative = "2.2.0"
tracing = "0.1.44"

codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", rev = "f028679abb30051cec2434e624cd99975986b41b" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", rev = "f028679abb30051cec2434e624cd99975986b41b" }
