[package]
name = "executor-gemini"
version = "0.0.143"
edition = "2024"

[dependencies]
executors-core = { path = "../executors-core" }
executors-protocol = { path = "../executors-protocol" }
logs-store = { path = "../logs-store" }

tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
schemars = { version = "1.0.4", features = ["derive", "chrono04", "uuid1", "preserve_order"] }
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
derivative = "2.2.0"
dirs = "5.0"
tracing = "0.1.44"
