[package]
name = "executors-core"
version = "0.0.143"
edition = "2024"

[dependencies]
executors-protocol = { path = "../executors-protocol" }
logs-protocol = { path = "../logs-protocol" }
logs-store = { path = "../logs-store" }
utils-core = { path = "../utils-core" }

tokio = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }

async-trait = { workspace = true }
bon = "3.6"
command-group = { version = "5.0", features = ["with-tokio"] }
futures = "0.3.31"
futures-io = "0.3.31"
json-patch = "2.0"
os_pipe = "1.2"
regex = "1.11.1"
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = "1.3.0"
strip-ansi-escapes = "0.2.1"
thiserror = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
ts-rs = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

agent-client-protocol = { version = "0.8", features = ["unstable"] }

[target.'cfg(windows)'.dependencies]
winsplit = "0.1.0"
