[package]
name = "executors"
version = "0.0.143"
edition = "2024"

[dependencies]
executors-core = { path = "../executors-core" }
executors-protocol = { path = "../executors-protocol" }
logs-store = { path = "../logs-store" }
utils-core = { path = "../utils-core" }
utils-assets = { path = "../utils-assets" }

async-trait = { workspace = true }
command-group = { version = "5.0", features = ["with-tokio"] }
convert_case = "0.6"
dirs = "5.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = "1.3.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
ts-rs = { workspace = true }

executor-amp = { path = "../executor-amp", optional = true }
executor-claude = { path = "../executor-claude", optional = true }
executor-codex = { path = "../executor-codex", optional = true }
executor-copilot = { path = "../executor-copilot", optional = true }
executor-cursor = { path = "../executor-cursor", optional = true }
executor-droid = { path = "../executor-droid", optional = true }
executor-fake-agent = { path = "../executor-fake-agent", optional = true }
executor-gemini = { path = "../executor-gemini", optional = true }
executor-opencode = { path = "../executor-opencode", optional = true }
executor-qwen = { path = "../executor-qwen", optional = true }

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["claude", "codex"]

amp = ["dep:executor-amp"]
claude = ["dep:executor-claude"]
codex = ["dep:executor-codex"]
copilot = ["dep:executor-copilot"]
cursor = ["dep:executor-cursor"]
droid = ["dep:executor-droid"]
fake-agent = ["dep:executor-fake-agent"]
gemini = ["dep:executor-gemini"]
opencode = ["dep:executor-opencode"]
qwen = ["dep:executor-qwen"]

[[bin]]
name = "fake-agent"
path = "src/bin/fake-agent.rs"
required-features = ["fake-agent"]
