[package]
name = "logs-store"
version = "0.0.143"
edition = "2024"

[dependencies]
logs-protocol = { path = "../logs-protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
json-patch = "2.0"
tokio-util = { version = "0.7", features = ["io", "codec"] }
bytes = "1.0"

