[package]
name = "repos"
version = "0.0.143"
edition = "2024"

[features]
default = []
cloud = []

[dependencies]
config = { path = "../config" }
db = { path = "../db" }
utils-core = { path = "../utils-core" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
tempfile = "3.21"
ignore = "0.4"
directories = "6.0.0"
regex = "1.11.1"
shlex = "1.3.0"
thiserror = { workspace = true }
futures = "0.3.31"
notify = "8.2.0"
notify-debouncer-full = "0.5.0"
dunce = "1.0"
dashmap = "6.1"
once_cell = "1.20"
moka = { version = "0.12", features = ["future", "sync"] }

[dev-dependencies]
db-migration = { path = "../db/migration" }
sea-orm = { version = "2.0.0-rc.28", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
sea-orm-migration = { version = "2.0.0-rc.28" }
