[package]
name = "utils-core"
version = "0.0.143"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io", "codec"] }
bytes = "1.0"
futures = "0.3.31"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
regex = "1.11.1"
open = "5.3.2"
directories = "6.0.0"
dirs = "5.0"
shlex = "1.3.0"
shellexpand = "3.1.1"
which = "8.0.0"
similar = "2"
thiserror = { workspace = true }

