[package]
name = "vk"
version = "0.1.0"
edition = "2024"
default-run = "vk"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
config = { path = "../config" }
db = { path = "../db" }
executors = { path = "../executors" }
executors-protocol = { path = "../executors-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
utils-assets = { path = "../utils-assets" }
utils-core = { path = "../utils-core" }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
sea-orm = { version = "2.0.0-rc.28", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }

